fix(user.css): made eternal jukebox stats visible

--- a/src/user.css
+++ b/src/user.css
@@ -2446,6 +2446,15 @@ input:checked ~ .x-toggle-indicatorWrapper .x-toggle-indicator {
   border: 1px rgba(var(--spice-rgb-accent), 0.7) solid !important;
 }
 
+.app-module__elements-container___Ac4rM_eternalDjukebox {
+  top: 8px;
+}
+
+.app-module__container___thHYo_eternalDjukebox {
+  padding-top: 8px;
+  padding-bottom: 120px;
+}
+
 button.arrow-btn {
   background-color: var(--spice-selected-row);
   color: var(--spice-text);
